############################
testrepository release notes
############################

NEXT (In development)
+++++++++++++++++++++

CHANGES
-------

* setup.py testr now supports different coverage names.
  (Marc Abramowitz, #1298398)

* Isolate the testrepository test suite from the chunking (or otherwise)
  behaviour of testtools' exception handlers. (Robert Collins)

* pbr is now used to manage build and release tooling.
  (Monty Taylor, Robert Collins)

* Unexpected errors reading streams from a file repository now propogate the
  correct exception. (Matthew Treinish, Robert Collins, #1409936)

* testrepository now requires at least version 0.0.11 of the subunit Python
  module.  (Jelmer Vernooĳ)

0.0.20
++++++

IMPROVEMENTS
------------

* Tests will be reliably tagged with worker-%d. The previous tagging logic
  had an implicit race - the tag id was looked up via a closure which gets
  the state of the pos variable at the position the overall loop has advanced
  too, not the position when the closure was created.
  (Robert Collins, #1316858)

0.0.19
++++++

CHANGES
-------

* Passing --subunit to all testr commands will now consistently output subunit
  v2. Previously it would output v1 for stored streams and v2 for live
  streams. (Robert Collins)

* ``run`` was outputting bad MIME types - test/plain, not text/plain.
  (Robert Collins)

* Test filtering was failing under python3 and would only apply the
  filters to the first test listed by discover. (Clark Boylan, #1317607)

* Tests that are enumerated but not executed will no longer reset the test
  timing data. Enumeration was incorrectly recording a 0 timestamp for
  enumerated tests. This leads to poor scheduling after an interrupted test
  run. (Robert Collins, #1322763)

* Version 0.0.18 of subunit is now a hard dependency - the v2 protocol solves
  key issues in concurrency and stream handling. Users that cannot use subunit
  v2 can run an older testrepository, or contact upstream to work through