@@ -1,4 +1,3 @@
-pbr>=1.3
 fixtures
 python-subunit >= 0.0.18
 testtools >= 0.9.30
