@@ -2,4 +2,4 @@
 
 import setuptools
 
-setuptools.setup(setup_requires=['pbr>=1.3'], pbr=True)
+setuptools.setup()
