@@ -22,9 +22,22 @@ The repository package contains the core storage code.
 The tests package contains tests and test specific support code.
 """
 
-# Yes, this is not PEP-396 compliant. It predates that.
-from pbr.version import VersionInfo
+try:
+    # If setuptools_scm is installed (e.g. in a development environment with
+    # an editable install), then use it to determine the version dynamically.
+    from setuptools_scm import get_version
 
-_v = VersionInfo('mock').semantic_version()
-version = _v.release_string()
-__version__ = _v.version_tuple()
+    # This will fail with LookupError if the package is not installed in
+    # editable mode or if Git is not installed.
+    version = get_version(root="..", relative_to=__file__)
+    __version__ = tuple(version.split("."))
+except (ImportError, LookupError):
+    # As a fallback, use the version that is hard-coded in the file.
+    try:
+        from ._version import __version__, version
+    except ModuleNotFoundError:
+        # The user is probably trying to run this without having installed
+        # the package, so complain.
+        raise RuntimeError(
+            "testrepository is not correctly installed. Please install it with pip."
+        )
